--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,1 +1,72 @@
 <h1> To Do API </h1>
+
+<div>
+  <ul id="todo">
+  </ul>
+  <br />
+
+  <form id='new-form'>
+    <input type="text" class="newtodo" placeholder="Add a new task">
+  </form>
+</div>
+
+<script>
+  $(function(){
+    // function taskHTML(task){
+    //   var checkedStatus = task.done ? "checked" : "";
+    //   var liElement = '<li><input class="toggle" type="checkbox" ' + 'data-id="' + task.id +'"' + checkedStatus +  '><label>'+task.title+'</label></li>';
+    //
+    //   return liElement;
+    // }
+
+    function taskHtml(task) {
+      var checkedStatus = task.done ? "checked" : "";
+      var liElement = '<li><div class="view"><input class="toggle" type="checkbox"' +
+        " data-id='" + task.id + "'" +
+        checkedStatus +
+        '><label>' +
+         task.title +
+         '</label></div></li>';
+
+      return liElement;
+    }
+
+    function toggleTask(e){
+      var itemId = $(e.target).data("id");
+      var doneValue = Boolean($(e.target).is(":checked"));
+      console.log(itemId);
+      $.post("/tasks/" + itemId, {
+          _method: "PUT",
+          task: {
+            done: doneValue
+          }
+      });
+    }
+
+    $.get('/tasks').success(function(data){
+      $.each(data, function(index, task){
+        var list = $('#todo');
+        list.append('<li><input class="toggle" type="checkbox"><label>'+task.title+'</label></li>');
+      });
+      $('.toggle').change(toggleTask);
+    });
+
+    $('#new-form').submit(function(event){
+      event.preventDefault();
+      var textBox = $('.newtodo').val();
+      var payload = {
+        task: {
+          title: textBox
+        }
+      };
+
+      $.post("/tasks", payload).success(function(data){
+        var htmlString = taskHTML(data);
+        var list = $('#todo');
+        list.append(htmlString);
+        $('.toggle').click(toggleTask);
+      });
+    });
+
+  });
+</script>
